# ai-governance-bootstrap

./: .gitattributes  .gitignore  CANONICAL_HASHES.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  WORKER_INTEGRATION.md  governance-version.json  pyproject.toml  requirements.lock.txt  requirements.txt  run-bootstrap.py
.github/workflows/: determinism.yml
agents/: agent-behaviour.md  capability-registry.md  session-start.md
bootstrap/: BOOTSTRAP_IDENTITY.md  BOOTSTRAP_PROMPT.md  evidence-spec.md  project-interrogation.md
constitution/: AI_ENGINEERING_CONSTITUTION.md
diagram/: governance-model.md  governance-runtime-architecture.mmd
guardrails/: baseline-rules.yaml  validation-patterns.yaml
learning/: governance-update-protocol.md  lessons-schema.md
runtime/: __init__.py  bootstrap-execution-spec.md  bootstrap-manifest.schema.json  capability-expansion-map.md  cli.py  execution-layer.md  executor.py  gates.py  governance-runtime.md  governance_context.py  manifest.py  paths.py  project-bootstrap-contract.md  worker_loader.py
tools/: governance-init.ps1  governance-init.sh
workers/: README.md
workers/gmail_bill_intelligence/: worker.yaml
